# otaku-friend

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
backend/.github/workflows/: build.yml
backend/src/: index.ts
backend/src/middleware/: logger.ts
backend/src/resources/anime/: anime.controller.ts  anime.router.ts  anime.services.ts  anime.types.ts
backend/src/router/: index.ts  v1.ts
backend/src/utils/: sanitizeString.ts  validateEnv.ts
elasticsearch/: config_user.sh
elasticsearch/config/: elasticsearch.yml
front/: .env.example  Dockerfile  package-lock.json  package.json
front/public/: index.html
front/src/: App.tsx
front/src/components/AnimeCard/: AnimeCard.tsx
front/src/services/: anime.ts  api.ts  log.ts
front/src/types/: anime.type.ts
front/src/utils/: genreSplit.ts
indexer/: Makefile  README.md  main.py  pyproject.toml
indexer/indexer/application/use_cases/: index_anime_data_use_case.py
indexer/indexer/domain/entities/: anime.py
indexer/indexer/domain/repositories/: anime_repository.py  csv_data_source.py
indexer/indexer/domain/services/: anime_indexing_service.py
indexer/indexer/infrastructure/: config.py  container.py
indexer/indexer/infrastructure/data_sources/: __init__.py  anime_csv_data_source.py
indexer/indexer/infrastructure/logging/: __init__.py  logger_config.py
indexer/indexer/infrastructure/repositories/: elasticsearch_anime_repository.py
indexer/scripts/: download_dataset.sh
(+8 files in other folders)
