[tool.poetry]
name = "indexer"
version = "0.1.0"
description = ""
authors = ["nbo2001 <natanbezerr63@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = ">=8.0.0,<9.0.0"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.1"
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest-cov = "^6.2.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
pythonpath = "."
addopts = "--cov=indexer --cov-fail-under=95 --cov-report=term-missing -v"

[tool.coverage.run]
source = ["indexer"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
